--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
-server.port=8096
-spring.datasource.name=youtube
-spring.datasource.url=jdbc:mysql://localhost:3306/youtube?serverTimezone=UTC
+server.port=8098
+spring.datasource.name=tushar
+spring.datasource.url=jdbc:mysql://localhost:3306/youtube_api
 spring.datasource.username=root
 spring.datasource.password=Tushar123@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
